--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,17 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
+fastapi
+uvicorn[standard]
+pydantic
 
 # RAG dependencies
 transformers==4.36.2
 sentence-transformers==2.5.1
 accelerate==0.26.0
 huggingface_hub==0.21.4
+bitsandbytes==0.43.0
+langsmith
 
 # Pinecone
-pinecone-client==3.0.0
+pinecone-client
 pinecone
 
 # Torch (CPU version or GPU)
@@ -17,4 +19,4 @@ torch==2.2.0       # use this unless you have CUDA
 
 # Utility
 python-dotenv==1.0.0
-numpy
+numpy==1.26.4
